      refresh.
    - ppc64le/sandbox/Sandbox-linux-services-credentials.cc-PPC.patch:
      refresh.
    - ppc64le/third_party/dawn-fix-ppc64le-detection.patch: refresh.
    - bookworm/more-spaceships.patch: yet another clang-17 header
      backport for clang-16 inadequecies.
    - bookworm/signer-lambda.patch: clang-16 lambda bug workaround.

  [ Timothy Pearson ]
  * d/patches/ppc64le:
    - third_party/dawn-fix-typos.patch: drop, applied upstream
    - third_party/0003-third_party-ffmpeg-Add-ppc64-generated-config.patch:
      refresh for upstream changes
    - libaom/0001-Add-pregenerated-config-for-libaom-on-ppc64.patch: refresh
      for upstream changes
    - core/cargo-add-ppc64.diff: Add ppc64 to cargo architecture definitions

 -- Andres Salomon <dilinger@debian.org>  Tue, 10 Sep 2024 21:56:02 -0400

chromium (128.0.6613.137-1~deb12u1) bookworm-security; urgency=high

  [ Andres Salomon ]
  * New upstream security release.
    - CVE-2024-8636: Heap buffer overflow in Skia.
      Reported by Renan Rios (@hyhy_100).
    - CVE-2024-8637: Use after free in Media Router. Reported by
      lime(@limeSec_) from TIANGONG Team of Legendsec at QI-ANXIN Group.
    - CVE-2024-8638: Type Confusion in V8.
      Reported by Zhenghang Xiao (@Kipreyyy).
    - CVE-2024-8639: Use after free in Autofill. Reported by
      lime(@limeSec_) from TIANGONG Team of Legendsec at QI-ANXIN Group.

  [ Timothy Pearson ]
  * d/patches/ppc64le:
    - core/add-ppc64-architecture-string.patch
    - fixes/fix-study-crash.patch

  [ Daniel Richard G. ]
  * d/copyright: Add some more Files-Excluded: entries.
  * d/rules: Ensure all files in orig source tarball are user-writable.
  * d/patches/disable:
    - tests.patch: Break out SwiftShader tests deletion to...
    - tests-swiftshader.patch: ...a separate file, to simplify resolving
      conflicts with the ungoogled-chromium patch series.

 -- Andres Salomon <dilinger@debian.org>  Tue, 10 Sep 2024 21:56:02 -0400
